<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="@dimen/featured_container_height"
    android:background="?attr/selectableItemBackground">
    <com.flaviofaria.kenburnsview.KenBurnsView
        android:id="@+id/featured_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/featured_image_height"
        android:layout_alignParentTop="true" />
    <FrameLayout
        android:id="@+id/title_background"
        android:layout_width="match_parent"
...
