<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Newspaper</string>
    <string name="app_version">Version %s</string>
    <string name="view_via">View via…</string>
    <string name="share_to">Share to…</string>
    <string name="update_indicator">New news available</string>
    <string name="learn_more">Learn more:</string>

    <!-- About -->
    <string name="about_visit">Visit website</string>
    <string name="about_rate">Rate this app</string>
    <string name="about_report">Contact us</string>

    <!-- Time namings -->
    <string name="time_ago_now">Just now</string>
    <string name="time_ago_minute">A minute ago</string>
    <string name="time_ago_minutes">%s minutes ago</string>
    <string name="time_ago_hour">An hour ago</string>
    <string name="time_ago_hours">%s hours ago</string>
    <string name="time_ago_day">Yesterday</string>
    <string name="time_ago_days">%s days ago</string>

    <!-- Actions -->
    <string name="action_search">Search</string>
    <string name="action_text_to_speech">Text to speech</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="action_view_on_web">View on web</string>
    <string name="action_share">Share</string>
    <string name="action_about">About</string>
    <string name="action_close">Close</string>
    <string name="action_apply">Apply changes</string>
    <string name="action_news">News</string>
    <string name="action_history">History</string>

    <!-- Empty states -->
    <string name="empty_news_title">Nothing here</string>
    <string name="empty_news_description">You can read more news in other categories, or refresh to try again.</string>
    <string name="empty_history_title">You haven\'t read any news yet</string>
    <string name="empty_history_description">Any news you\'ve read will be collected here</string>
    <string name="empty_bookmark_title">You don\'t have any favorite news yet</string>
    <string name="empty_bookmark_description">Tap on the bookmark icon to collect news here</string>

    <!-- Errors -->
    <string name="error_tts_not_supported">Speech engine is not supported on this device</string>
    <string name="error_tts_not_initialized">Failed to initialize speech engine</string>

    <!-- Search -->
    <string name="search_hint">Search news</string>

    <!-- Preferences -->
    <string name="pref_cozy_layout">Cozy layout</string>
    <string name="pref_dark_theme">Dark theme</string>
    <string name="pref_auto_play">Play video news automatically</string>
    <string name="pref_settings">Settings</string>
    <string name="pref_sources">Sources</string>
    <string name="pref_categories">Categories</string>
    <string-array name="sources">
        <item>蘋果日報</item><!-- 0 -->
        <item>東方日報</item><!-- 1 -->
        <item>星島日報</item><!-- 2 -->
        <item>星島即時</item><!-- 3 -->
        <item>經濟日報</item><!-- 4 -->
        <item>成報</item><!-- 5 -->
        <item>明報</item><!-- 6 -->
        <item>頭條日報</item><!-- 7 -->
        <item>頭條即時</item><!-- 8 -->
        <item>晴報</item><!-- 9 -->
        <item>信報</item><!-- 10 -->
        <item>香港電台</item><!-- 11 -->
        <item>南華早報</item><!-- 12 -->
        <item>英文虎報</item><!-- 13 -->
        <item>文匯報</item><!-- 14 -->
    </string-array>
    <string-array name="categories">
        <item>港聞</item><!-- 0 -->
        <item>國際</item><!-- 1 -->
        <item>兩岸</item><!-- 2 -->
        <item>經濟</item><!-- 3 -->
        <item>地產</item><!-- 4 -->
        <item>娛樂</item><!-- 5 -->
        <item>體育</item><!-- 6 -->
        <item>副刊</item><!-- 7 -->
        <item>教育</item><!-- 8 -->
        <item>即時港聞</item><!-- 9 -->
        <item>即時國際</item><!-- 10 -->
        <item>即時兩岸</item><!-- 11 -->
        <item>即時經濟</item><!-- 12 -->
        <item>即時地產</item><!-- 13 -->
        <item>即時娛樂</item><!-- 14 -->
        <item>即時體育</item><!-- 15 -->
        <item>即時副刊</item><!-- 16 -->
    </string-array>

    <!-- Content descriptions -->
    <string name="exo_play">Play</string>
    <string name="exo_pause">Pause</string>
    <string name="exo_fullscreen">Enter fullscreen</string>
    <string name="exo_fullscreen_exit">Exit fullscreen</string>
</resources>
