<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="@dimen/space16">
    <com.github.piasy.biv.view.BigImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?attr/placeholderImage"
        app:initScaleType="centerCrop" />
    <ImageView
        android:id="@+id/play"
        android:layout_width="@dimen/iconNormal"
        android:layout_height="@dimen/iconNormal"
        android:layout_gravity="center"
        android:contentDescription="@string/exo_play"
        android:tint="?attr/indicatorColor"
        android:scaleType="center"
        app:srcCompat="@drawable/ic_play_circle_outline" />
</FrameLayout>
