<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/windowBackground"
    android:fitsSystemWindows="true">
    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/bottombar_height"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        app:elevation="0dp">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottombar_height"
        android:layout_gravity="bottom"
        android:background="?attr/tabBarBackgroundColor"
        app:itemTextColor="?attr/tabItemColor"
        app:itemIconTint="?attr/tabItemColor"
        app:elevation="@dimen/space16"
        app:menu="@menu/bottom" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottombar_height"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_anchor="@+id/content"
        app:layout_anchorGravity="end|bottom"
        app:layout_behavior="com.github.ayltai.newspaper.view.FloatingActionButtonBehavior">
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/action_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fabMargin"
            android:stateListAnimator="@animator/lift_on_pressed"
            android:visibility="invisible"
            app:srcCompat="?attr/ic_up_24dp"
            app:fabSize="mini"
            app:backgroundTint="?attr/windowBackground" />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/action_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fabMargin"
            android:stateListAnimator="@animator/lift_on_pressed"
            android:visibility="invisible"
            app:srcCompat="?attr/ic_refresh_24dp"
            app:fabSize="mini"
            app:backgroundTint="?attr/windowBackground" />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/action_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fabMargin"
            android:stateListAnimator="@animator/lift_on_pressed"
            android:visibility="invisible"
            app:srcCompat="?attr/ic_settings_24dp"
            app:fabSize="mini"
            app:backgroundTint="?attr/windowBackground" />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/action_clear_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fabMargin"
            android:stateListAnimator="@animator/lift_on_pressed"
            android:visibility="invisible"
            app:srcCompat="?attr/ic_clear_all_24dp"
            app:fabSize="mini"
            app:backgroundTint="?attr/windowBackground" />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/action_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fabMarginLarge"
            android:layout_gravity="end|bottom"
            android:stateListAnimator="@animator/lift_on_pressed"
            app:srcCompat="@drawable/ic_open_white_24dp"
            app:fabSize="normal" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
